# sx

./: .gitignore  .ocamlformat  Dockerfile  Makefile  NOTES.md  TODO.md  default.nix  dune  dune-project  dune-workspace  onix-lock.json  onix.nix  onix.opam.locked  package-lock.json  package.json  preflight.css  re_match.opam  schema.flx  schema.shape  shell.nix  sx.json  sx.opam  theme.json
cli/: dune  main.ml
data/: input.csv  output.csv  tw4-theme.css
experiments/dune-action-gen/: dune
experiments/sx_ppx/: dune  ppx.ml
experiments/sx_types/: types.ml
experiments/test_ppx/: input.ml  output.ml
experiments/test_ppx_use/: dune  input_c.ml  input_d.ml  output.css
experiments/tyre_routes/: main.ml
lib/: css.ml  dune  gen.ml  lex.mll  prelude.ml  sx.ml  theme.ml
plugin/: dune  plugin.ml
re_match/: dune  re_match.ml  re_match.mli
re_match/lib/: re_match.ml
sx/: Sx.ml  dune
sx/cli/: main.ml
sx/lib/: config.ml  css.ml  dune  prelude.ml  sx.ml  sx.mli
tests/: Test.ml  custom.t  delim.t  dune
tests/expect/: out.css
tests/gen_tests/: basic.t  delim.t  reject.t
tests/tarides_com_tests/: main.css  out-tw.css  site.classes  tailwind.config.js
tests/test_api/: dune  test_api.ml
tests/test_ppx/: dune  input.ml
tests/test_ppx_use/: dune  input_a.ml  input_b.ml  main.ml
tests/test_tw_parsing/: basic.t  reject.t
tests/vs_tw3/: Makefile  simple-in.csv  tw-run.js  (+5 more)
tools/: css_fmt.ml  dune  sx_linewise.ml  tw_get_rules.ml
twlexer/: css_output.ml  dune  gen.ml  lex.mll  preflight.ml  twlexer.ml
twparser/: Twparser.ml  Twparser.mly  dune
(+6 files in other folders)
